# ChangeLog for dev-util/autoproject
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/autoproject/ChangeLog,v 1.6 2005/08/12 19:40:13 metalgod Exp $

  12 Aug 2005; Luis Medinas <metalgod@gentoo.org> autoproject-0.17.ebuild:
  Add ~amd64 Keywords.

  07 May 2005; David Holm <dholm@gentoo.org> autoproject-0.17.ebuild:
  Added to ~ppc.

  11 Dec 2003; Heinrich Wendel <lanius@gentoo.org> autoproject-0.17.ebuild:
  x86

*autoproject-0.17 (11 Dec 2003)

  11 Dec 2003; Heinrich Wendel <lanius@gentoo.org> autoproject-0.17.ebuild,
  metadata.xml:
  moved from sys-devel to dev-util

*autoproject-0.17 (06 Sep 2003)

  06 Sep 2003; Michael Sterrett <msterret@gentoo.org> autoproject-0.17.ebuild:
  rewrote ebuild so I could fix the header; also version bump

*autoproject-0.16 (23 Oct 2002)

  23 Oct 2002; J Robert Ray <jrray@gentoo.org>

  New ebuild submitted by Dan Hopkins <drhop12@earthlink.net>.