@@ -1,0 +1,6 @@
+MD5 185929e4c312a6b9a5f7c99bf5df4902 autoproject_0.20-3.diff.gz 4704
+RMD160 6cbf391442ef73cb8529a8c13a5a32a12523d53f autoproject_0.20-3.diff.gz 4704
+SHA256 f201fc7431d189c80297fba31867013e9efe6dec2c19399d52e9ceb4356ee562 autoproject_0.20-3.diff.gz 4704
+MD5 609369fa76391d58714059313b9c831c autoproject_0.20.orig.tar.gz 151101
+RMD160 acd5a20f6070c3eceab2ae24d1850ae27bc00764 autoproject_0.20.orig.tar.gz 151101
+SHA256 850ff70e250fbd34c1193461b0fc8e1254803ee22a9d116cdbcc822b551766cc autoproject_0.20.orig.tar.gz 151101
