@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/autoproject
-# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/autoproject/ChangeLog,v 1.6 2005/08/12 19:40:13 metalgod Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/autoproject/ChangeLog,v 1.7 2006/08/06 00:07:11 vapier Exp $
+
+*autoproject-0.20 (06 Aug 2006)
+
+  06 Aug 2006; Mike Frysinger <vapier@gentoo.org> -autoproject-0.17.ebuild,
+  +autoproject-0.20.ebuild:
+  Version bump and fix HOMEPAGE #71889 by Luke Worth.
 
   12 Aug 2005; Luis Medinas <metalgod@gentoo.org> autoproject-0.17.ebuild:
   Add ~amd64 Keywords.
